--- a/style.css
+++ b/style.css
@@ -1,125 +1,80 @@
-/* RESET */
-
-* {
-    box-sizing: border-box;
-}
-
 a {
     text-decoration: none;
     color: inherit;
 }
 
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-
-
 body {
-    background-color: #1F2937;
+    padding: 0;
+    margin: 0;
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
+.section-container {
+    height: 100%;
+    width: 1365px;
+    margin: 0 auto;
+    border: 2px solid rgb(121, 121, 0);
+    display: flex;
+}
 
+.section-container.header-container {
+    justify-content: space-between;
+}
 
-/* HEADER */
 
 .header {
+    border: 2px solid red;
     height: 70px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background-color: #1F2937;
 }
 
 .header-logo {
-    display: block;
-    display: flex;
-    align-items: center;
-    height: 100%;
+    color: #F9FAF8;
     font-size: 24px;
-    color: #F9FAF8;
-    font-weight: 700;
-    margin-left: 20px;
-}
-
-.header-links {
-    display: flex;
-    height: 100%;
-    font-size: 18px;
-    color: #E5E7EB;
-    gap: 30px;
-    align-items: center;
-    margin-right: 20px;
-}
-
-.header-links a {
-    display: block;
-    padding: 20px 10px;
-}
-
-/* HERO SECTION */
-.hero-section {
-    background-color: #1F2937;
-    border: 2px solid pink;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    
-}
-
-.hero-container {
-    display: flex;
-    border: 2px solid yellow;
-    width: 1200px;
-    height: 500px;
-        align-items: center;
-        justify-content: space-between;
-}
-
-.hero-content {
+    font-weight: 600;
     border: 2px solid green;
-    width: 475px;
+    display: flex;
     align-items: center;
 }
 
-.hero-main-text {
-    color: #F9FAF8;
-    font-weight: 900;
-    font-size: 48px;
-    margin: 0;
-}
-
-.hero-secondary-text {
+.header-nav {
     font-size: 18px;
     color: #E5E7EB;
-    margin: 20px 0px;
-}
-
-.signup-button {
-    background-color: #3882F6;
-    color: #F9FAF8;
-    font-weight: bold;
-    padding: 10px 30px;
-    border-radius: 5px;
-    border: none;
-    font-size: 18px;
-}
-
-.hero-image {
-    background-color: rgb(173, 173, 173);
+    border: 2px solid pink;
     display: flex;
-    color: #ffffff;
-    width: 600px;
-    height: 250px;
-    align-items: center;
-    justify-content: center;
+    gap: 30px;
 }
 
+.header-nav a {
+    border: 2px solid lightgreen;
+    display: flex;
+    align-items: center;
+}
 
+.hero-section {
+    height: 700px;
+    border: 2px solid blue;
+    background-color: #1F2937;
+}
 
+.category-section {
+    height: 665px;
+    border: 2px solid green;
+}
+
+.quote-section {
+    height: 570px;
+    border: 2px solid purple;
+    background-color: #E5E7EB;
+}
+
+.action-section {
+    height: 465px;
+    border: 2px solid orange;
+}
+
+.footer {
+    height: 135px;
+    border: 2px solid turquoise;
+    background-color: #1F2937;
+}
