--- a/style.css
+++ b/style.css
@@ -65,43 +65,52 @@ a {
 
 .hero-section {
     height: 700px;
-    border: 2px solid blue;
     background-color: #1F2937;
 }
 
 .hero-section .section-container {
     display: flex;
     justify-content: space-between;
+    gap: 30px;
 }
 
 .hero-content {
-    border: 2px solid red;
-    width: 200px;
+    height: 50%;
+    flex: 1;
 }
 
 .hero-main-text {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: 900;;
+    margin: 0px 0px 10px 0px;
+    width: 70%;
 }
 
 .hero-secondary-text {
     color: #E5E7EB;
     font-size: 18px;
+    margin: 0px 0px 20px 0px;
+
 }
 
 .signup-button {
     background-color: #3882F6;
+    border: none;
+    color: #F9FAF8;
+    font-size: 22px;
+    font-weight: 600;
+    border-radius: 5px;
+    padding: 10px 30px;
 }
 
 .hero-image {
-    width: 698px;
-    height: 318px;
+    height: 100%;
+    width: 100%;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/3/3f/Placeholder_view_vector.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    border: 2px solid lightgreen;
 }
 
 
