--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@ a {
 
 .header {
     height: 70px;
+    width: 100%;
     background-color: #1F2937;
-    padding: 0px 20px;
+    position: fixed;
 }
 
-.section-container.header-container {
+.header-container {
     justify-content: space-between;
 }
 
@@ -102,6 +103,7 @@ a {
     font-weight: 600;
     border-radius: 5px;
     padding: 10px 30px;
+    align-self: flex-end;
 }
 
 .hero-image {
@@ -113,15 +115,59 @@ a {
     background-size: cover;
 }
 
-
-
-
-
-
+/* CATEGORY SECTION */
 .category-section {
     height: 665px;
     border: 2px solid green;
 }
+
+.category-container {
+    flex-direction: column;
+    justify-content: center;
+}
+
+.category-section-title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    margin-bottom: 75px;
+}
+
+.categories {
+    display: flex;
+    gap: 50px;
+}
+
+.card {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.card-image {
+    border: 4px solid #3882f6;
+    border-radius: 10px;
+    height: 200px;
+    width: 200px;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    color: #1F2937;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .quote-section {
     height: 570px;
