--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a {
 
 .section-container {
     height: 100%;
-    width: 1365px;
+    padding: 0px 20px;
     max-width: 1365px;
     margin: 0 auto;
     display: flex;
@@ -132,6 +132,7 @@ a {
 
 .categories {
     display: flex;
+    align-items: center;
     gap: 50px;
 }
 
